made it configurable
- config: replaced "updateLoaderCMD" and "updateIndexJsCMD" to an array of commands in "hookAfterChange"
- config: renamed "componentsPath" with "componentsDest" for more clarity
- templates: removed them from this project and made them configurable on a project basis, in "componentsTemplates"

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-fractal-component",
-  "version": "0.0.6",
+  "version": "1.0.0-alpha",
   "description": "Generates fractal component boilerplate",
   "author": {
     "name": "superhuit",
