--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-fractal-component",
-  "version": "1.0.0-alpha",
+  "version": "1.0.0-alpha2",
   "description": "Generates fractal component boilerplate",
   "author": {
     "name": "superhuit",
